<resources>
    <string name="app_name">TipCalculatorActivity_Sheikh</string>
    <string name="TipCalculator"> Tip Calculator</string>
    <string name="Amount"> Enter your check amount: </string>
    <string name="tip_percentage"> Select a tip percentage </string>
    <string name="ten"> 10% </string>
    <string name="twenty"> 20% </string>
    <string name="thirty"> 30% </string>
    <string name="Calculate"> Calculate </string>
    <string name="Result"> Your calculated tip is and your total is %.2f </string>

</resources>
