<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/TipCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TipCalculator"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/Amount"
        android:textAlignment="center"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/amount_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/TipPercentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_percentage"
        android:textAlignment="center"
        android:textSize="13sp" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="inherit">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ten" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twenty" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thirty" />

    </RadioGroup>

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculate"
        />

    <TextView
        android:id="@+id/calculatedresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:autoText="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="visible" />
</LinearLayout>